Fixed mobile menu centering on small devices

--- a/style/css/index.css
+++ b/style/css/index.css
@@ -309,7 +309,7 @@ p {
   .nav .mobile-menu-main {
     display: flex;
     align-items: center;
-    height: calc(100vh - 120px); }
+    min-height: 500px; }
   .nav .mobile-menu ul {
     list-style: none;
     padding-left: 0;
