--- a/style/scss/nav.scss
+++ b/style/scss/nav.scss
@@ -198,7 +198,7 @@
   .mobile-menu-main {
     display: flex;
     align-items: center;
-    height: calc(100vh - 120px);
+    min-height: 500px;
   }
 
   .mobile-menu ul {
